--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-iam": "^3.848.0",
+    "@aws-sdk/client-s3": "^3.850.0",
     "@aws-sdk/client-sts": "^3.848.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
